--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <title>Madd Web Quiz</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
