added buttons for start game and query selectors and initial questions

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
         </div>
 
         <!-- inner div -->
+        <h2> Welcome to My Quiz</h2>
+        <button id="startbutton">Start Game</button>
     </div class="inner-container">
 
     <!-- main header/ quiz intro -->
     <header class="quiz-intro">
-
+        <h2 id="question"></h2>
+        <button id="rightAnswer">Right Answer</button>
     </header>
 
     <!-- main quiz content -->
@@ -34,6 +37,7 @@
     <div>
 
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
