added timer function, incorrect and correct answer notifications, end game.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,21 @@
     <div class="questions hidden">
         <h2 id="question">question</h2>
         <div class="choices">
-        
+
         </div>
+        <span id="incorrect"></span>
+        <span id="timer">30</span>
+    </div>
+    <div class="outro hidden">
+        <h2>game over</h2>
+        <p>you scored <span id="score"></span></p>
+        <form action="">
+            <label for="">
+                enter your initials
+            </label>
+            <input type="text">
+            <button type="submit">all set</button>
+        </form>
     </div>
     <!-- <div class="outer-container">
 
